# SMAIV_PICO_W

./: README.md
Fases_Projeto/Fase_01/smaiv_pico_w_project_fase_01/: CMakeLists.txt  README.md
Fases_Projeto/Fase_01/smaiv_pico_w_project_fase_01/src/: ws2812.pio
Fases_Projeto/Fase_02/smaiv_pico_w_project_fase_02/: README.md
Fases_Projeto/Fase_02/smaiv_pico_w_project_fase_02/src/: config.h  main.c
Fases_Projeto/Fase_03/smaiv_pico_w_project_fase_03/: CMakeLists.txt  README.md
Fases_Projeto/Fase_03/smaiv_pico_w_project_fase_03/src/: config.h  main.c
Fases_Projeto/Fase_04/smaiv_pico_w_project_fase_04/: CMakeLists.txt  README.md
Fases_Projeto/Fase_04/smaiv_pico_w_project_fase_04/src/: config.h  lwipopts.h
Fases_Projeto/Fasse_05/smaiv_pico_w_project_fase_05/: README.md
Fases_Projeto/Fasse_05/smaiv_pico_w_project_fase_05/src/: common.h  config.h  main.c
SMAIV_PICO_W/: README.md
SMAIV_PICO_W/Fases_Projeto/Fase_01/smaiv_pico_w_project_fase_01/: README.md
SMAIV_PICO_W/Fases_Projeto/Fase_01/smaiv_pico_w_project_fase_01/src/: main.c
SMAIV_PICO_W/Fases_Projeto/Fase_02/smaiv_pico_w_project_fase_02/: CMakeLists.txt  README.md
SMAIV_PICO_W/Fases_Projeto/Fase_02/smaiv_pico_w_project_fase_02/src/: main.c
SMAIV_PICO_W/Fases_Projeto/Fase_03/smaiv_pico_w_project_fase_03/: README.md
SMAIV_PICO_W/Fases_Projeto/Fase_04/smaiv_pico_w_project_fase_04/: README.md
SMAIV_PICO_W/Fases_Projeto/Fase_04/smaiv_pico_w_project_fase_04/src/: config.h  main.c
SMAIV_PICO_W/Fases_Projeto/Fasse_05/smaiv_pico_w_project_fase_05/: CMakeLists.txt  README.md
(+11 files in other folders)
